use the pre-segmented scales in the rabia nb

--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -7,33 +7,19 @@
    "source": [
     "Scale Analysis Example\n",
     "====\n",
-    "Using scales from Rabia Sevil\n",
+    "Using scales from Rabia Sevil, which is why this file is named like it is\n",
     "\n",
-    "We'll read the LIF files, try to segment them out (either just by thresholding or by using a pretrained model) and then run EFA to summarise their shape variation.\n",
+    "We'll read the LIF files, try to segment them out and then run EFA to summarise their shape variation.\n",
+    "So far I've only done this on the ALP scales, since they looked like they'd be easiest to segment.\n",
     "\n",
     "Read in the scales\n",
-    "----"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6cfc20f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a321b69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot = True"
+    "----\n",
+    "I've segmented the scales out following the process in [the segmentation notebook](segmentation.ipynb).\n",
+    "\n",
+    "This involved:\n",
+    " - making an initial rough segmentation by thresholding\n",
+    " - Running SAM (a transformer-based model from Meta) on the scales, using the rough segmentation as a prior\n",
+    " - manually tidying them up where necessary"
    ]
   },
   {
@@ -43,97 +29,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Read in the images + various segmentations\n",
+    "\"\"\"\n",
+    "\n",
     "import pathlib\n",
+    "import tifffile\n",
     "\n",
-    "parent_dir = pathlib.Path(\"~/zebrafish_rdsf/Rabia/SOST scales\").expanduser()\n",
-    "assert parent_dir.exists()\n",
+    "segmentation_dir = pathlib.Path(\"segmentation\")\n",
+    "assert segmentation_dir.is_dir()\n",
     "\n",
-    "scale_dirs = tuple(d for d in parent_dir.glob(\"*\") if not d.stem in {\".DS_Store\", \"TIFs\"})"
+    "dirs = [\n",
+    "    segmentation_dir / \"images\",\n",
+    "    segmentation_dir / \"mask_priors\",\n",
+    "    segmentation_dir / \"sam_masks\",\n",
+    "    segmentation_dir / \"cleaned_masks\",\n",
+    "]\n",
+    "\n",
+    "names, images, rough_segmentations, sam_segmentations, clean_segmentations = (\n",
+    "    [],\n",
+    "    [],\n",
+    "    [],\n",
+    "    [],\n",
+    "    [],\n",
+    ")\n",
+    "for img_path, rough_path, sam_path, clean_path in zip(\n",
+    "    *(sorted(list(d.glob(\"*.tif\"))) for d in dirs)\n",
+    "):\n",
+    "    name = img_path.name\n",
+    "    assert name == rough_path.name == sam_path.name == clean_path.name\n",
+    "\n",
+    "    images.append(tifffile.imread(img_path))\n",
+    "    rough_segmentations.append(tifffile.imread(rough_path))\n",
+    "    sam_segmentations.append(tifffile.imread(sam_path))\n",
+    "    clean_segmentations.append(tifffile.imread(clean_path))\n",
+    "    names.append(name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e648093",
+   "id": "dba4981c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scale_morphology.scales import read\n",
+    "\"\"\"\n",
+    "Show a couple of the segmentations at different stages on top of the actual images\n",
+    "\"\"\"\n",
     "\n",
-    "scale_dir = scale_dirs[1]\n",
-    "scale_paths = scale_dir.glob(\"*.lif\")\n",
-    "path = next(scale_paths)\n",
-    "print(path)\n",
-    "\n",
-    "names, images = zip(*read.read_lif(path))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f7c8219",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "import textwrap\n",
-    "from tqdm.notebook import tqdm\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "def factor_int(n):\n",
-    "    val = math.ceil(math.sqrt(n))\n",
-    "    val2 = int(n / val)\n",
-    "    while val2 * val != float(n):\n",
-    "        val -= 1\n",
-    "        val2 = int(n / val)\n",
-    "    return val, val2\n",
-    "\n",
-    "\n",
-    "def plot_imgs(images, **plot_kw):\n",
-    "    global titles\n",
-    "\n",
-    "    n_figs = factor_int(len(images))\n",
-    "\n",
-    "    fig, axes = plt.subplots(*n_figs, figsize=[3 * x for x in n_figs])\n",
-    "    for axis, img, title in zip(tqdm(axes.flat), images, titles):\n",
-    "        axis.imshow(img, **plot_kw)\n",
-    "        axis.set_title(title)\n",
+    "def plot_masks(masks, title):\n",
+    "    fig, axes = plt.subplots(6, 6, figsize=(6, 6))\n",
+    "    for axis, img, mask in zip(axes.flat, images, masks):\n",
+    "        axis.imshow(img, cmap=\"grey\")\n",
+    "        axis.imshow(mask, alpha=0.5, cmap=\"Reds\")\n",
     "        axis.set_axis_off()\n",
+    "\n",
+    "    fig.suptitle(title)\n",
     "    fig.tight_layout()\n",
     "\n",
-    "\n",
-    "titles = [\"\\n\".join(textwrap.wrap(name, width=10)) for name in names]\n",
-    "if plot:\n",
-    "    plot_imgs(images)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d651271e",
-   "metadata": {},
-   "source": [
-    "Segment them\n",
-    "----\n",
-    "Now that we have read the scales into memory, we want to threshold them out.\n",
-    "There aren't that many, so we could probably just do this by hand, but I don't have a mouse right now so I'm going to try to do it using computers."
+    "plot_masks(rough_segmentations, \"First we threshold to get a rough idea of the scale shape\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ddf3ef8",
+   "id": "cd9f554c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "So I can continue with the analysis while some stuff downloads, let's pretend that these are the finished masks...\n",
-    "\"\"\"\n",
-    "import pathlib\n",
-    "import tifffile\n",
-    "mask_dir = pathlib.Path(\"segmentation_stuff/masks\")\n",
-    "\n",
-    "masks = [tifffile.imread(path) for path in tqdm(list(mask_dir.glob(\"*.tif\")))]"
+    "plot_masks(sam_segmentations, \"Then we use the SAM model to refine the prediction\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cabf51b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_masks(clean_segmentations, \"Then I went through by hand and cleaned them up a little in places\")"
    ]
   },
   {
@@ -178,28 +155,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ecea119f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "First tidy the masks up a little, because I broke some of them when cleaning them\n",
+    "\"\"\"\n",
+    "\n",
+    "from scipy.ndimage import binary_fill_holes\n",
+    "from scale_morphology.scales.segmentation import largest_connected_component\n",
+    "\n",
+    "masks = [\n",
+    "    255 * largest_connected_component(binary_fill_holes(m)).astype(np.uint8)\n",
+    "    for m in clean_segmentations\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "40641cfc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
     "\"\"\"\n",
     "Perform EFA on the scales and plot the reconstruction\n",
     "\"\"\"\n",
-    "import pathlib\n",
-    "import importlib\n",
-    "\n",
-    "import tifffile\n",
     "import numpy as np\n",
     "from tqdm.notebook import tqdm\n",
-    "from scipy.ndimage import binary_fill_holes\n",
     "from scale_morphology.scales import efa, errors, segmentation\n",
+    "\n",
     "\n",
     "n_edge_points = 200\n",
     "order = 50\n",
-    "\n",
-    "masks = [255*tifffile.imread(f).astype(np.uint8) for f in tqdm(list((pathlib.Path(\"segmentation_stuff2\")/\"masks\").glob(\"*.tif\")))]\n",
     "\n",
     "coeffs = []\n",
     "for scale in tqdm(masks):\n",
@@ -214,22 +203,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2faacf7c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "good_indices = ~np.isnan(coeffs).any(axis=(1, 2))\n",
-    "\n",
-    "mask_dir = pathlib.Path(\"segmentation_stuff2\") / \"masks\"\n",
-    "good_mask_names = np.array([path.name for path in tqdm(list(mask_dir.glob(\"*.tif\")))])[\n",
-    "    good_indices\n",
-    "]\n",
-    "good_coeffs = coeffs[good_indices]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b9c530ab",
    "metadata": {},
    "outputs": [],
@@ -238,16 +211,11 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
-    "images = np.array(masks)[good_indices]\n",
-    "flat_coeffs = good_coeffs.reshape((good_coeffs.shape[0], -1))\n",
+    "images = np.array(masks)\n",
+    "flat_coeffs = coeffs.reshape((coeffs.shape[0], -1))\n",
     "\n",
     "pca = PCA(n_components=2)\n",
-    "transformed_coeffs = np.ascontiguousarray(pca.fit_transform(flat_coeffs))\n",
-    "\n",
-    "good_imgs = [\n",
-    "    tifffile.imread(f\"segmentation_stuff/masks/{pathlib.Path(p).name}\")\n",
-    "    for p in tqdm(good_mask_names)\n",
-    "]"
+    "transformed_coeffs = np.ascontiguousarray(pca.fit_transform(flat_coeffs))"
    ]
   },
   {
@@ -260,7 +228,7 @@
     "from scale_morphology.scales import dashboard\n",
     "\n",
     "embeddable_imgs = [\n",
-    "    dashboard.embeddable_image(i.astype(np.uint8) * 255) for i in tqdm(good_imgs)\n",
+    "    dashboard.embeddable_image(i.astype(np.uint8)) for i in tqdm(clean_segmentations)\n",
     "]\n",
     "\n",
     "\n",
@@ -271,20 +239,20 @@
     "    name = name.lower()\n",
     "    if \"hom\" in name:\n",
     "        if \"ontogenetic\" in name:\n",
-    "            return 0\n",
-    "        return 1\n",
+    "            return \"Hom Onto\"\n",
+    "        return \"Hom Regen\"\n",
     "    if \"ontogenetic\" in name:\n",
-    "        return 2\n",
-    "    return 3\n",
+    "        return \"WT Onto\"\n",
+    "    return \"WT Regen\"\n",
     "\n",
     "\n",
-    "for name in good_mask_names:\n",
+    "for name in names:\n",
     "    colours.append(str(_colour(name)))\n",
     "\n",
     "dashboard_df = pd.DataFrame(transformed_coeffs, columns=[\"x\", \"y\"])\n",
     "dashboard_df[\"image\"] = embeddable_imgs\n",
     "dashboard_df[\"colour\"] = colours\n",
-    "dashboard_df[\"name\"] = good_mask_names\n",
+    "dashboard_df[\"name\"] = names\n",
     "\n",
     "dashboard_df"
    ]
@@ -378,7 +346,7 @@
     "from scale_morphology.scripts.plotting import interpret_dimensions\n",
     "\n",
     "interpret_dimensions._plot_pca_importance(\n",
-    "    good_coeffs, np.zeros(good_coeffs.shape[0], dtype=bool)\n",
+    "    flat_coeffs, np.zeros(flat_coeffs.shape[0], dtype=bool)\n",
     ")"
    ]
   },
@@ -389,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sizes = [np.sum(m) / 255 for m in tqdm(np.array(masks)[good_indices])]"
+    "sizes = [np.sum(m) / 255 for m in tqdm(np.array(masks))]"
    ]
   },
   {
@@ -408,73 +376,6 @@
     "plot_dir = pathlib.Path(\"rabia\")\n",
     "plot_dir.mkdir(exist_ok=True)\n",
     "plt.savefig(plot_dir /\"sizes.png\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5432235",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.spatial import ConvexHull\n",
-    "from skimage.draw import polygon\n",
-    "\n",
-    "\n",
-    "def convex_hull_mask(mask_bool):\n",
-    "    \"\"\"Rasterize the convex hull of foreground pixels into a mask.\"\"\"\n",
-    "    ys, xs = np.nonzero(mask_bool)\n",
-    "    pts = np.stack([xs, ys], axis=1)  # (x, y)\n",
-    "    if pts.shape[0] < 3:\n",
-    "        return mask_bool.copy(), 0.0\n",
-    "    hull = ConvexHull(pts)\n",
-    "    hull_xy = pts[hull.vertices]\n",
-    "    rr, cc = polygon(hull_xy[:, 1], hull_xy[:, 0], shape=mask_bool.shape)\n",
-    "    hull_mask = np.zeros_like(mask_bool, dtype=bool)\n",
-    "    hull_mask[rr, cc] = True\n",
-    "    return hull_mask, hull.volume  # hull.volume is 2D area\n",
-    "\n",
-    "\n",
-    "def concavity_metrics(mask_bool):\n",
-    "    area = float(mask_bool.sum())\n",
-    "    if area == 0:\n",
-    "        return dict(\n",
-    "            solidity=np.nan,\n",
-    "            concavity_frac=np.nan,\n",
-    "            dent_max=np.nan,\n",
-    "            dent_mean=np.nan,\n",
-    "            dent_max_norm=np.nan,\n",
-    "            concavity_area=np.nan,\n",
-    "        )\n",
-    "\n",
-    "    hull_mask, hull_area = convex_hull_mask(mask_bool)\n",
-    "    if hull_area == 0:\n",
-    "        return dict(\n",
-    "            solidity=np.nan,\n",
-    "            concavity_frac=np.nan,\n",
-    "            dent_max=np.nan,\n",
-    "            dent_mean=np.nan,\n",
-    "            dent_max_norm=np.nan,\n",
-    "            concavity_area=np.nan,\n",
-    "        )\n",
-    "\n",
-    "    # Area-based concavity\n",
-    "    solidity = area / hull_area\n",
-    "    return 1.0 - solidity\n",
-    "\n",
-    "\n",
-    "concavity = [concavity_metrics(m == 255) for m in tqdm(np.array(masks)[good_indices])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c3703b00",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(concavity, transformed_coeffs[:, 1], \".\")\n",
-    "plt.tight_layout()"
    ]
   },
   {
