--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -69,6 +69,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "389ac7c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import textwrap\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 2)\n",
+    "# G\n",
+    "for axis, i in zip(axes.flat, (0, 90, 180, 270)):\n",
+    "    axis.imshow(images[i])\n",
+    "    axis.set_title(\"\\n\".join(textwrap.wrap(names[i], width=20)), fontsize=8)\n",
+    "    axis.set_axis_off()\n",
+    "fig.suptitle(\"This is what a scale looks like\")\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dba4981c",
    "metadata": {},
    "outputs": [],
@@ -76,8 +96,6 @@
     "\"\"\"\n",
     "Show a couple of the segmentations at different stages on top of the actual images\n",
     "\"\"\"\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
     "def plot_masks(masks, title):\n",
