simple LDA and plot the EFA

--- a/src/notebooks/rabia_analysis.ipynb
+++ b/src/notebooks/rabia_analysis.ipynb
@@ -77,7 +77,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "fig, axes = plt.subplots(2, 2)\n",
-    "# G\n",
+    "# Pick some different looking scales\n",
     "for axis, i in zip(axes.flat, (0, 90, 180, 270)):\n",
     "    axis.imshow(images[i])\n",
     "    axis.set_title(\"\\n\".join(textwrap.wrap(names[i], width=20)), fontsize=8)\n",
@@ -108,7 +108,10 @@
     "    fig.suptitle(title)\n",
     "    fig.tight_layout()\n",
     "\n",
-    "plot_masks(rough_segmentations, \"First we threshold to get a rough idea of the scale shape\")"
+    "\n",
+    "plot_masks(\n",
+    "    rough_segmentations, \"First we threshold to get a rough idea of the scale shape\"\n",
+    ")"
    ]
   },
   {
@@ -180,7 +183,7 @@
     "\"\"\"\n",
     "First tidy the masks up a little, because I broke some of them when cleaning them\n",
     "\"\"\"\n",
-    "\n",
+    "import numpy as np\n",
     "from scipy.ndimage import binary_fill_holes\n",
     "from scale_morphology.scales.segmentation import largest_connected_component\n",
     "\n",
@@ -216,6 +219,31 @@
     "        coeffs.append(np.ones((order, 4)) * np.nan)\n",
     "        print(f\"\\nError processing scale: {e}. NaN coeffs\")\n",
     "coeffs = np.stack(coeffs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeb82cfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 100\n",
+    "fig, axis = plt.subplots(figsize=(8,8))\n",
+    "axis.imshow(images[i].sum(axis=2).T, origin=\"lower\", cmap=\"grey\")\n",
+    "axis.set_aspect(\"equal\")\n",
+    "\n",
+    "locus = [np.average(x) for x in np.where(scale > 0)]\n",
+    "x, y = efa.coeffs2points(coeffs[i], locus[::-1])\n",
+    "axis.plot(y, images[i].shape[1] - x, label=\"Elliptic Expansion best fit\")\n",
+    "\n",
+    "x, y = efa.points_around_edge(masks[i], 100)\n",
+    "axis.plot(x, y, \"r.\", markersize=5, label=\"Edges\")\n",
+    "\n",
+    "axis.set_axis_off()\n",
+    "axis.legend()\n",
+    "\n",
+    "fig.suptitle(\"I broke the plotting but this is how it works\")"
    ]
   },
   {
@@ -394,6 +422,29 @@
     "plot_dir = pathlib.Path(\"rabia\")\n",
     "plot_dir.mkdir(exist_ok=True)\n",
     "plt.savefig(plot_dir /\"sizes.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1f75fb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "\n",
+    "lda = LinearDiscriminantAnalysis()\n",
+    "new_coeffs = lda.fit_transform(flat_coeffs, colours)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcd5befe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.scatter(new_coeffs)"
    ]
   },
   {
