--- a/src/notebooks/segmentation.ipynb
+++ b/src/notebooks/segmentation.ipynb
@@ -35,6 +35,7 @@
     "\n",
     "import pathlib\n",
     "\n",
+    "# NB these are now under Carran's dir\n",
     "parent_dir = pathlib.Path(\"~/zebrafish_rdsf/Rabia/SOST scales\").expanduser()\n",
     "assert parent_dir.exists()\n",
     "\n",
