library fcns + notebook for performing segmentation

--- a/src/notebooks/carran_analysis.ipynb
+++ b/src/notebooks/carran_analysis.ipynb
@@ -9,7 +9,10 @@
     "====\n",
     "- Read in the LIF files\n",
     "- Save them as TIFs (they're nicer for me to work with)\n",
-    "- Segment them with my pipeline"
+    "- Segment them with my pipeline\n",
+    "\n",
+    "Part 1 - converting to TIF\n",
+    "----"
    ]
   },
   {
@@ -46,14 +49,6 @@
     "lif_paths = [l for l in lif_paths if \"out of focus\" not in str(l) and not l.is_dir() and not l.stem == \".DS_Store\"]\n",
     "lif_paths"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0b14bf6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -213,6 +208,113 @@
     "        tifffile.imwrite(out_dir / path, img)\n",
     "except FileExistsError:\n",
     "    print(\"dir\", out_dir, \"exists\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d28673fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aebd099",
+   "metadata": {},
+   "source": [
+    "Part 2: segmenting out the scales\n",
+    "----\n",
+    "Assuming the above has run, we will now segment out the scales stored in the TIF files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33ef3ec1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dad92654",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" \"\"\"\n",
+    "\n",
+    "import pathlib\n",
+    "\n",
+    "parent_dir = pathlib.Path(\n",
+    "    \"~/zebrafish_rdsf/Carran/Postgrad/Scale images from WT_spp1_sost\"\n",
+    ").expanduser()\n",
+    "assert parent_dir.exists()\n",
+    "\n",
+    "in_dir = parent_dir / \"TIFs\"\n",
+    "assert in_dir.is_dir()\n",
+    "\n",
+    "out_dir = in_dir / \"segmentations\"\n",
+    "out_dir.mkdir(exist_ok=True)\n",
+    "\n",
+    "in_paths = sorted(list(in_dir.glob(\"*.tif\")))\n",
+    "\n",
+    "out_paths = [out_dir / (name.stem + \"_segmentation.tif\") for name in in_paths]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef8d3f00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tifffile\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "from scale_morphology.scales import segmentation\n",
+    "\n",
+    "for in_path, out_path in zip(tqdm(in_paths), out_paths, strict=True):\n",
+    "    img = tifffile.imread(in_path)\n",
+    "    mask = segmentation.segment_alp(\n",
+    "        img,\n",
+    "        device=\"cuda\",\n",
+    "        model_type=\"vit_h\",\n",
+    "        model_checkpoint=pathlib.Path(\"checkpoints\") / \"sam_vit_h_4b8939.pth\",\n",
+    "    )\n",
+    "    tifffile.imwrite(out_path, mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a90c3d96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Now that the segmentation has run, have a look at them just to check\n",
+    "\"\"\"\n",
+    "\n",
+    "import numpy as np\n",
+    "import tifffile\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, axes = plt.subplots(4, 4, figsize=(10, 10))\n",
+    "indices = np.random.randint(0, 600, size=16)\n",
+    "\n",
+    "for i, axis in zip(indices, axes.flat):\n",
+    "    axis.imshow(tifffile.imread(in_paths[i]))\n",
+    "    axis.imshow(tifffile.imread(out_paths[i]), alpha=0.5)\n",
+    "    axis.set_axis_off()\n",
+    "\n",
+    "fig.tight_layout()"
    ]
   }
  ],
