continue if we can't find a threshold with the minimum method (which sometimes happened)

--- a/src/notebooks/carran_analysis.ipynb
+++ b/src/notebooks/carran_analysis.ipynb
@@ -281,6 +281,8 @@
     "from scale_morphology.scales import segmentation\n",
     "\n",
     "for in_path, out_path in zip(tqdm(in_paths), out_paths, strict=True):\n",
+    "    if out_path.exists():\n",
+    "        continue\n",
     "    img = tifffile.imread(in_path)\n",
     "    mask = segmentation.segment_alp(\n",
     "        img,\n",
