rough notebook for EFA on the initial segmentations

--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -71,7 +71,451 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_mdata(df[df[\"magnification\"] != -1])"
+    "plot_mdata(df[df[\"magnification\"] != -1])\n",
+    "plt.gcf().suptitle(\"High-mag ones only\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7b5d695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "\n",
+    "# Create a pivot table to count occurrences of each combination of \"age\" and \"sex\"\n",
+    "heatmap_data = df.pivot_table(\n",
+    "    index=\"age\", columns=\"sex\", aggfunc=\"size\", fill_value=0\n",
+    ")\n",
+    "\n",
+    "# Plot the heatmap\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.heatmap(heatmap_data, annot=True, fmt=\"d\", cbar=True)\n",
+    "plt.title(\"Counts of Age and Sex\")\n",
+    "plt.ylabel(\"Age\")\n",
+    "plt.xlabel(\"Sex\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f6320d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tifffile\n",
+    "from tqdm.notebook import tqdm\n",
+    "from scale_morphology.scales import efa, errors\n",
+    "\n",
+    "scales = [\n",
+    "    tifffile.imread(path).astype(np.uint8) * 255 for path in tqdm(segmentation_paths)\n",
+    "]\n",
+    "\n",
+    "coeff_dump = pathlib.Path(\"rough_carran_coeffs.npy\")\n",
+    "\n",
+    "if coeff_dump.is_file():\n",
+    "    coeffs = np.load(coeff_dump)\n",
+    "else:\n",
+    "    n_edge_points, order = 300, 50\n",
+    "    coeffs = []\n",
+    "    for scale in tqdm(scales):\n",
+    "        try:\n",
+    "            coeffs.append(efa.coefficients(scale, n_edge_points, order))\n",
+    "        except errors.BadImgError as e:\n",
+    "            coeffs.append(np.ones((order, 4)) * np.nan)\n",
+    "            print(f\"\\nError processing scale: {e}. NaN coeffs\")\n",
+    "    coeffs = np.stack(coeffs)\n",
+    "    np.save(coeff_dump, coeffs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "468d7128",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "flat_coeffs = coeffs.reshape((coeffs.shape[0], -1))\n",
+    "nan_mask = np.isnan(flat_coeffs).any(axis=1)\n",
+    "flat_coeffs_nan_removed = flat_coeffs[~nan_mask]\n",
+    "\n",
+    "pca = PCA(n_components=2)\n",
+    "pca_coeffs = np.ascontiguousarray(pca.fit_transform(flat_coeffs_nan_removed))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "648e1d59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nan_removed = df[~nan_mask].copy()\n",
+    "df_nan_removed.loc[:, \"pca1\"] = pca_coeffs[:, 0]\n",
+    "df_nan_removed.loc[:, \"pca2\"] = pca_coeffs[:, 1]\n",
+    "\n",
+    "df_nan_removed.sort_values(by=\"magnification\", inplace=True, ascending=True)\n",
+    "df_nan_removed.sort_values(by=\"age\", inplace=True)\n",
+    "df_nan_removed.sort_values(by=\"sex\", inplace=True, ascending=True)\n",
+    "df_nan_removed[\"age\"] = df_nan_removed[\"age\"].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84c28963",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covariates = [\"age\", \"sex\", \"magnification\"]\n",
+    "cmaps = [\"magma\", \"Set1\", \"Set1\"]\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(12, 6))\n",
+    "\n",
+    "for axis, hue, cmap in zip(axes, covariates, cmaps, strict=True):\n",
+    "    sns.scatterplot(\n",
+    "        df_nan_removed,\n",
+    "        x=\"pca1\",\n",
+    "        y=\"pca2\",\n",
+    "        hue=hue,\n",
+    "        ax=axis,\n",
+    "        alpha=1,\n",
+    "        s=10,\n",
+    "        palette=cmap,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f625271",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scale_morphology.scales import dashboard\n",
+    "\n",
+    "scales_nan_removed = []\n",
+    "names_nan_removed = []\n",
+    "for scale, name, x in zip(scales, df[\"path\"], nan_mask):\n",
+    "    if not x:\n",
+    "        scales_nan_removed.append(scale)\n",
+    "        names_nan_removed.append(pathlib.Path(name).stem)\n",
+    "\n",
+    "\n",
+    "dashboard_dir = pathlib.Path(\"rough_carran_dashboards/\")\n",
+    "dashboard_dir.mkdir(exist_ok=True)\n",
+    "\n",
+    "age_db = dashboard_dir / \"pca_age.html\"\n",
+    "if not age_db.is_file():\n",
+    "    dashboard.write_dashboard(\n",
+    "        pca_coeffs,\n",
+    "        scales_nan_removed,\n",
+    "        df_nan_removed[\"age\"],\n",
+    "        names_nan_removed,\n",
+    "        age_db,\n",
+    "        \"PCA - age\",\n",
+    "    )\n",
+    "\n",
+    "sex_db = dashboard_dir / \"pca_sex.html\"\n",
+    "if not sex_db.is_file():\n",
+    "    dashboard.write_dashboard(\n",
+    "        pca_coeffs,\n",
+    "        scales_nan_removed,\n",
+    "        df_nan_removed[\"sex\"],\n",
+    "        names_nan_removed,\n",
+    "        sex_db,\n",
+    "        \"PCA - sex\",\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d0bd0a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Repeat with LDA\n",
+    "\"\"\"\n",
+    "\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "\n",
+    "lda = LinearDiscriminantAnalysis()\n",
+    "lda_coeffs = lda.fit_transform(flat_coeffs_nan_removed, df_nan_removed[\"sex\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffcd9293",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axis = plt.subplots()\n",
+    "\n",
+    "plot_kw = {\"s\": 6}\n",
+    "\n",
+    "axis.scatter(\n",
+    "    *lda_coeffs[df_nan_removed[\"sex\"] == \"?\"].T, **plot_kw, color=\"grey\", label=\"?\"\n",
+    ")\n",
+    "axis.scatter(\n",
+    "    *lda_coeffs[df_nan_removed[\"sex\"] == \"M\"].T, **plot_kw, color=\"blue\", label=\"M\"\n",
+    ")\n",
+    "axis.scatter(\n",
+    "    *lda_coeffs[df_nan_removed[\"sex\"] == \"F\"].T, **plot_kw, color=\"red\", label=\"F\"\n",
+    ")\n",
+    "\n",
+    "axis.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6742a1d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "KDE\n",
+    "\"\"\"\n",
+    "\n",
+    "from scipy.stats import gaussian_kde\n",
+    "from matplotlib import colors\n",
+    "from matplotlib.patches import Patch\n",
+    "\n",
+    "xmax, ymax = lda_coeffs.max(axis=0)\n",
+    "xmin, ymin = lda_coeffs.min(axis=0)\n",
+    "\n",
+    "values = lda_coeffs.T\n",
+    "xx, yy = np.mgrid[xmin:xmax:100j, ymin:ymax:100j]\n",
+    "positions = np.vstack([xx.ravel(), yy.ravel()])\n",
+    "\n",
+    "\n",
+    "def clear2colour_cmap(colour) -> colors.Colormap:\n",
+    "    \"\"\"\n",
+    "    Colormap that varies from clear to black\n",
+    "    \"\"\"\n",
+    "    c_white = colors.colorConverter.to_rgba(\"white\", alpha=0)\n",
+    "    c_black = colors.colorConverter.to_rgba(colour, alpha=0.5)\n",
+    "    return colors.ListedColormap([c_white, c_black], f\"clear2{colour}\")\n",
+    "\n",
+    "\n",
+    "def plot_kde(values, axis, cmap):\n",
+    "    x, y = values\n",
+    "\n",
+    "    kernel = gaussian_kde(values)\n",
+    "    f = np.reshape(kernel(positions).T, xx.shape)\n",
+    "    axis.contourf(xx, yy, f, cmap=cmap)\n",
+    "\n",
+    "\n",
+    "fix, axis = plt.subplots()\n",
+    "\n",
+    "axis.set_xlim(xmin, xmax)\n",
+    "axis.set_ylim(ymin, ymax)\n",
+    "\n",
+    "f = plot_kde(values.T[df_nan_removed[\"sex\"] == \"F\"].T, axis, clear2colour_cmap(\"r\"))\n",
+    "f = plot_kde(values.T[df_nan_removed[\"sex\"] == \"M\"].T, axis, clear2colour_cmap(\"b\"))\n",
+    "f = plot_kde(values.T[df_nan_removed[\"sex\"] == \"?\"].T, axis, clear2colour_cmap(\"grey\"))\n",
+    "axis.legend(\n",
+    "    handles=[\n",
+    "        Patch(color=\"b\", label=\"M\"),\n",
+    "        Patch(color=\"r\", label=\"F\"),\n",
+    "        Patch(color=\"grey\", label=\"?\"),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c125cf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lda_db_sex = dashboard_dir / \"lda_sex.html\"\n",
+    "if not lda_db_sex.is_file():\n",
+    "    dashboard.write_dashboard(\n",
+    "        lda_coeffs,\n",
+    "        scales_nan_removed,\n",
+    "        df_nan_removed[\"sex\"],\n",
+    "        names_nan_removed,\n",
+    "        lda_db_sex,\n",
+    "        \"LDA - sex\",\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f84c7698",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Ignore the unknown sex ones\n",
+    "\"\"\"\n",
+    "\n",
+    "colours = {\n",
+    "    (\"7\", \"F\"): \"lightcoral\",\n",
+    "    (\"12\", \"F\"): \"indianred\",\n",
+    "    (\"18\", \"F\"): \"brown\",\n",
+    "    (\"40\", \"F\"): \"red\",\n",
+    "    (\"7\", \"M\"): \"cornflowerblue\",\n",
+    "    (\"12\", \"M\"): \"royalblue\",\n",
+    "    (\"18\", \"M\"): \"darkblue\",\n",
+    "    (\"40\", \"M\"): \"blue\",\n",
+    "}\n",
+    "\n",
+    "fig, axis = plt.subplots()\n",
+    "\n",
+    "sexed_df = df_nan_removed.copy()\n",
+    "sexed_df[[\"lda1\", \"lda2\"]] = values.T\n",
+    "sexed_df = sexed_df[sexed_df[\"sex\"] != \"?\"]\n",
+    "\n",
+    "handles = []\n",
+    "for (age, sex), group in sexed_df.groupby([\"age\", \"sex\"]):\n",
+    "    colour = colours[(age, sex)]\n",
+    "    plot_kde(\n",
+    "        group[[\"lda1\", \"lda2\"]].to_numpy().T,\n",
+    "        axis,\n",
+    "        clear2colour_cmap(colour),\n",
+    "    )\n",
+    "    n = len(group)\n",
+    "    handles.append(Patch(color=colour, label=f\"{sex}, {age}, {n=}\"))\n",
+    "print(handles)\n",
+    "axis.legend(handles=handles, loc=\"upper left\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f44759e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Do LDA again but split by age\n",
+    "\"\"\"\n",
+    "\n",
+    "mf_mask = df_nan_removed[\"sex\"] != \"?\"\n",
+    "mf_df = df_nan_removed[mf_mask].copy()\n",
+    "mf_coeffs = flat_coeffs_nan_removed[mf_mask]\n",
+    "\n",
+    "# Want these groups - M/F age 7/12/18/40\n",
+    "groups = np.zeros(mf_coeffs.shape[0], dtype=int)\n",
+    "\n",
+    "groups[mf_df[\"sex\"] == \"M\"] += 8\n",
+    "\n",
+    "groups[mf_df[\"age\"] == \"12\"] += 1\n",
+    "groups[mf_df[\"age\"] == \"18\"] += 2\n",
+    "groups[mf_df[\"age\"] == \"40\"] += 4\n",
+    "\n",
+    "encoding = {\n",
+    "    0: \"F7\",\n",
+    "    1: \"F12\",\n",
+    "    2: \"F18\",\n",
+    "    4: \"F40\",\n",
+    "    8: \"M7\",\n",
+    "    9: \"M12\",\n",
+    "    10: \"M18\",\n",
+    "    12: \"M40\",\n",
+    "}\n",
+    "\n",
+    "# Check we've correctly encoded it\n",
+    "mf_df.loc[:, \"age_sex_group\"] = groups\n",
+    "for val, group in mf_df.groupby(\"age_sex_group\"):\n",
+    "    sexes = group[\"sex\"].unique()\n",
+    "    ages = group[\"age\"].unique()\n",
+    "    assert len(sexes) == 1, (val, sexes, ages)\n",
+    "    assert len(ages) == 1, (val, sexes, ages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "828d8cca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lda = LinearDiscriminantAnalysis()\n",
+    "lda_coeffs = lda.fit_transform(mf_coeffs, groups)\n",
+    "lda_coeffs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93fcaac5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 5, figsize=(20, 4))\n",
+    "\n",
+    "colours = {\n",
+    "    0: \"lightcoral\",\n",
+    "    1: \"indianred\",\n",
+    "    2: \"brown\",\n",
+    "    4: \"red\",\n",
+    "    8: \"cornflowerblue\",\n",
+    "    9: \"royalblue\",\n",
+    "    10: \"darkblue\",\n",
+    "    12: \"blue\",\n",
+    "}\n",
+    "\n",
+    "for i, axis in enumerate(axes):\n",
+    "    for j in encoding:\n",
+    "        axis.scatter(\n",
+    "            lda_coeffs[groups == j].T[i],\n",
+    "            lda_coeffs[groups == j].T[i + 1],\n",
+    "            c=colours[j],\n",
+    "            label=encoding[j],\n",
+    "            s=6,\n",
+    "        )\n",
+    "\n",
+    "axes[0].legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d49bdef9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 5, figsize=(20, 4))\n",
+    "\n",
+    "for i, axis in enumerate(axes):\n",
+    "    x = lda_coeffs[:, i]\n",
+    "    y = lda_coeffs[:, i + 1]\n",
+    "\n",
+    "    # Grid for this pair\n",
+    "    xmin, xmax = x.min(), x.max()\n",
+    "    ymin, ymax = y.min(), y.max()\n",
+    "    xx, yy = np.mgrid[xmin:xmax:200j, ymin:ymax:200j]\n",
+    "    positions = np.vstack([xx.ravel(), yy.ravel()])\n",
+    "\n",
+    "    handles = []\n",
+    "    for g, label in encoding.items():\n",
+    "        mask = groups == g\n",
+    "        if mask.sum() < 2:\n",
+    "            continue  # KDE needs at least 2 points\n",
+    "\n",
+    "        data = np.vstack([x[mask], y[mask]])\n",
+    "        kde = gaussian_kde(data)\n",
+    "        f = np.reshape(kde(positions).T, xx.shape)\n",
+    "\n",
+    "        axis.contourf(xx, yy, f, levels=15, cmap=clear2colour_cmap(colours[g]))\n",
+    "        n = int(np.sum(mask))\n",
+    "        handles.append(Patch(color=colours[g], label=f\"{label}, {n=}\"))\n",
+    "\n",
+    "    axis.set_title(f\"LD{i+1} vs LD{i+2}\")\n",
+    "\n",
+    "if handles:\n",
+    "    axes[0].legend(handles=handles, loc=\"upper left\")"
    ]
   }
  ],
